content/browser/renderer_host/input/fling_scheduler.cc
@@ -60,7 +60,6 @@ void FlingScheduler::UnregisterFlingSchedulerObserver() {
 }
 
 void FlingScheduler::DidStopFlingingOnBrowser() {
-  UnregisterFlingSchedulerObserver();
   host_->DidStopFlinging();
 }
 
