content/browser/renderer_host/input/fling_scheduler_android.cc
@@ -55,7 +55,6 @@ void FlingSchedulerAndroid::UnregisterFlingSchedulerObserver() {
 }
 
 void FlingSchedulerAndroid::DidStopFlingingOnBrowser() {
-  UnregisterFlingSchedulerObserver();
   host_->DidStopFlinging();
 }
 
